# gen/proto/api/service/v1/service.pb.validate.go
@@ -246,6 +246,109 @@ var _ interface {
 	ErrorName() string
 } = DataItemValidationError{}
 
+// Validate checks the field values on FileItem with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *FileItem) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on FileItem with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in FileItemMultiError, or nil
+// if none found.
+func (m *FileItem) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *FileItem) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Name
+
+	// no validation rules for Key
+
+	if len(errors) > 0 {
+		return FileItemMultiError(errors)
+	}
+
+	return nil
+}
+
+// FileItemMultiError is an error wrapping multiple validation errors returned
+// by FileItem.ValidateAll() if the designated constraints aren't met.
+type FileItemMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m FileItemMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m FileItemMultiError) AllErrors() []error { return m }
+
+// FileItemValidationError is the validation error returned by
+// FileItem.Validate if the designated constraints aren't met.
+type FileItemValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e FileItemValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e FileItemValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e FileItemValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e FileItemValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e FileItemValidationError) ErrorName() string { return "FileItemValidationError" }
+
+// Error satisfies the builtin error interface
+func (e FileItemValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sFileItem.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = FileItemValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = FileItemValidationError{}
+
 // Validate checks the field values on FileChunk with the rules defined in the
 // proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -474,7 +577,7 @@ func (m *DeleteFileRequest) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for Title
+	// no validation rules for FileName
 
 	if len(errors) > 0 {
 		return DeleteFileRequestMultiError(errors)
@@ -1584,7 +1687,7 @@ func (m *ListFileResponse) validate(all bool) error {
 
 	var errors []error
 
-	for idx, item := range m.GetDataItem() {
+	for idx, item := range m.GetFileItem() {
 		_, _ = idx, item
 
 		if all {
@@ -1592,7 +1695,7 @@ func (m *ListFileResponse) validate(all bool) error {
 			case interface{ ValidateAll() error }:
 				if err := v.ValidateAll(); err != nil {
 					errors = append(errors, ListFileResponseValidationError{
-						field:  fmt.Sprintf("DataItem[%v]", idx),
+						field:  fmt.Sprintf("FileItem[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -1600,7 +1703,7 @@ func (m *ListFileResponse) validate(all bool) error {
 			case interface{ Validate() error }:
 				if err := v.Validate(); err != nil {
 					errors = append(errors, ListFileResponseValidationError{
-						field:  fmt.Sprintf("DataItem[%v]", idx),
+						field:  fmt.Sprintf("FileItem[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -1609,7 +1712,7 @@ func (m *ListFileResponse) validate(all bool) error {
 		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
 			if err := v.Validate(); err != nil {
 				return ListFileResponseValidationError{
-					field:  fmt.Sprintf("DataItem[%v]", idx),
+					field:  fmt.Sprintf("FileItem[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
